--- a/favourite.html
+++ b/favourite.html
@@ -49,7 +49,7 @@
         </div>
     </main>
 
-    <script src="scripts/favourite.js"></script>
+    <script src="favourite.js"></script>
 </body>
 
 </html>
