--- a/details.html
+++ b/details.html
@@ -169,7 +169,7 @@
         </div>
     </main>
 
-    <script src="details.js"></script>
+    <script src="scripts/details.js"></script>
 </body>
 
 </html>
