--- a/favourite.html
+++ b/favourite.html
@@ -28,7 +28,7 @@
     <header>
         <a href="index.html">
             <div class="nav-left">
-                <img id="logo" src="super.jpg" width="50px">
+                <img id="logo" src="assets/super.jpg" width="50px">
                 <div id="logo-text">
                     <h1><font color="yellow">Hunter</font></h1>
                 </div>
@@ -49,7 +49,7 @@
         </div>
     </main>
 
-    <script src="favourite.js"></script>
+    <script src="scripts/favourite.js"></script>
 </body>
 
 </html>
